# PDF-RAG-AI

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  initial-prompt.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
specs/001-setup-docling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-setup-docling/checklists/: requirements.md
specs/001-setup-docling/contracts/: cli-contract.md
specs/002-rag-chunking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-chunking/checklists/: requirements.md
specs/002-rag-chunking/contracts/: cli-contract.md
src/cli/: main.py
src/lib/: config.py  io_utils.py  ollama_utils.py
src/models/: types.py
src/services/: converter.py  rag_service.py
tests/contract/: test_cli.py
tests/unit/: test_config.py  test_converter.py  test_io_utils.py  test_ollama_utils.py  test_rag_service.py
