[project]
name = "pdf-rag-ai"
version = "0.1.0"
description = "PDF RAG Pipeline for AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "docling==2.59.0",
    "easyocr>=1.7.2",
    "huggingface-hub[hf-xet]>=0.36.0",
    "onnxruntime>=1.23.2",
    "rapidocr>=3.4.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
pdf-rag = "src.cli.main:cli"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.uv]
package = true
